force-app/main/default/objects/ClanWarMember__c/ClanWarMember__c.object-meta.xml
<CustomObject>
    <label>Clan War Member</label>
    <nameField>
        <label>Clan War Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clan War Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>