force-app/main/default/objects/ClanWarMember__c/fields/BestOpponentAttack__c.field-meta.xml
<CustomField>
    <fullName>BestOpponentAttack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Best Opponent Attack</label>
    <referenceTo>ClanWarAttack__c</referenceTo>
    <relationshipLabel>Best Opponent</relationshipLabel>
    <relationshipName>BestOpponent</relationshipName>
    <type>Lookup</type>
</CustomField>