force-app/main/default/objects/ClanWarMember__c/fields/ClanMember__c.field-meta.xml
<CustomField>
    <fullName>ClanMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clan Member</label>
    <referenceTo>ClanMember__c</referenceTo>
    <relationshipLabel>Clan War Members</relationshipLabel>
    <relationshipName>ClanWarMembers</relationshipName>
    <type>Lookup</type>
</CustomField>