force-app/main/default/objects/ClanWarMember__c/fields/MapPosition__c.field-meta.xml
<CustomField>
    <fullName>MapPosition__c</fullName>
    <label>Map Position</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>