force-app/main/default/objects/ClanWarMember__c/fields/OpponentAttacks__c.field-meta.xml
<CustomField>
    <fullName>OpponentAttacks__c</fullName>
    <label>Opponent Attacks</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>