force-app/main/default/objects/ClanWarMember__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>war clan id + clan member tag</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>28</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>