force-app/main/default/objects/ClanWarMember__c/fields/WarClan__c.field-meta.xml
<CustomField>
    <fullName>WarClan__c</fullName>
    <label>War Clan</label>
    <referenceTo>WarClan__c</referenceTo>
    <relationshipLabel>Clan War Members</relationshipLabel>
    <relationshipName>ClanWarMembers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>